--- a/kie-wb/src/main/docker/tomcat/Dockerfile
+++ b/kie-wb/src/main/docker/tomcat/Dockerfile
@@ -16,17 +16,14 @@ ENV KIE_CONNECTION_DATABASE kie
 LABEL org.kie.kie-wb.artifact=org.kie:kie-wb-distribution-wars:war:tomcat7
 LABEL org.jbpm.jbpm-dashboard.artifact=org.jbpm.dashboard:jbpm-dashboard-distributions:war:tomcat7
 
-####### KIE-WB & DASHBOARD BUILDER & SITE WAR ############
+####### KIE-WB & DASHBOARD BUILDER WAR ############
 ADD maven/kie-wb.war $CATALINA_HOME/webapps/kie-wb.war
 ADD maven/dashbuilder.war $CATALINA_HOME/webapps/dashbuilder.war
-ADD maven/site $CATALINA_HOME/webapps/site
 
 RUN unzip -q -d $CATALINA_HOME/webapps/kie-wb $CATALINA_HOME/webapps/kie-wb.war && \
 rm -rf $CATALINA_HOME/webapps/kie-wb.war && \
 unzip -q -d $CATALINA_HOME/webapps/dashbuilder $CATALINA_HOME/webapps/dashbuilder.war && \
-rm -rf $CATALINA_HOME/webapps/dashbuilder.war && \
-unzip -q -d $CATALINA_HOME/webapps/site $CATALINA_HOME/webapps/site/kie-wb-site.jar && \
-rm -rf $CATALINA_HOME/webapps/site/kie-wb-site.jar
+rm -rf $CATALINA_HOME/webapps/dashbuilder.war
 
 ####### TOMCAT EXTRA LIBRARIES ############
 ADD maven/tomcat-libs $CATALINA_HOME/lib/
