--- a/kie-server/pom.xml
+++ b/kie-server/pom.xml
@@ -14,21 +14,18 @@
   <name>KIE Execution Server :: Docker integration</name>
 
   <dependencies>
-
     <dependency>
       <groupId>org.kie.server</groupId>
       <artifactId>kie-server</artifactId>
       <classifier>ee6</classifier>
       <type>war</type>
     </dependency>
-
     <dependency>
       <groupId>org.kie.server</groupId>
       <artifactId>kie-server</artifactId>
       <classifier>ee7</classifier>
       <type>war</type>
     </dependency>
-
     <dependency>
       <groupId>org.kie.server</groupId>
       <artifactId>kie-server</artifactId>
@@ -36,47 +33,35 @@
       <type>war</type>
     </dependency>
 
-    <!--
-        Dependencies for deploying into Tomcat7 shared library.
-    -->
+    <!-- Additional dependencies for Tomcat 8 -->
     <dependency>
       <groupId>org.kie</groupId>
       <artifactId>kie-tomcat-integration</artifactId>
     </dependency>
-
-    <!--
-        Dependencies for deploying into Tomcat7 shared library. 
-    -->
     <dependency>
       <groupId>org.codehaus.btm</groupId>
       <artifactId>btm</artifactId>
     </dependency>
-
     <dependency>
       <groupId>org.codehaus.btm</groupId>
       <artifactId>btm-tomcat55-lifecycle</artifactId>
     </dependency>
-
     <dependency>
       <groupId>com.h2database</groupId>
       <artifactId>h2</artifactId>
     </dependency>
-
     <dependency>
       <groupId>org.jboss.spec.javax.transaction</groupId>
       <artifactId>jboss-transaction-api_1.1_spec</artifactId>
     </dependency>
-
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
     </dependency>
-
     <dependency>
       <groupId>org.jboss.spec.javax.security.jacc</groupId>
       <artifactId>jboss-jacc-api_1.4_spec</artifactId>
     </dependency>
-
   </dependencies>
 
   <build>
@@ -160,14 +145,14 @@
                 <!--</log>-->
               <!--</run>-->
             <!--</image>-->
-            <!-- KIE Server latest SNAPSHOT & Tomcat7. -->
+            <!-- KIE Server & Tomcat8. -->
             <image>
-              <name>${docker.kie.repository}/kie-server-tomcat7:${docker.build.kie.tag}</name>
-              <alias>kie-server-tomcat7-${docker.build.kie.tag}-h2</alias>
+              <name>${docker.kie.repository}/kie-server-tomcat8:${docker.build.kie.tag}</name>
+              <alias>kie-server-tomcat8-${docker.build.kie.tag}-h2</alias>
               <build>
                 <assembly>
                   <dockerFileDir>${project.build.outputDirectory}/tomcat</dockerFileDir>
-                  <descriptor>${pom.basedir}/src/main/assembly/assembly-kie-server-tomcat7.xml</descriptor>
+                  <descriptor>${pom.basedir}/src/main/assembly/assembly-kie-server-tomcat8.xml</descriptor>
                 </assembly>
               </build>
               <run>
