--- a/kie-server/pom.xml
+++ b/kie-server/pom.xml
@@ -79,39 +79,39 @@
         <configuration>
           <!-- KIE Images. -->
           <images>
-            <!-- KIE Server latest SNAPSHOT & Wildfly 8.1.0.Final. -->
-            <!--<image>-->
-              <!--<name>${docker.kie.repository}/kie-server-wildfly8:${docker.build.kie.tag}</name>-->
-              <!--<alias>kie-server-wildfly8-${docker.build.kie.tag}-h2</alias>-->
-              <!--<build>-->
-                <!--<assembly>-->
-                  <!--<dockerFileDir>${project.build.outputDirectory}/wildfly</dockerFileDir>-->
-                  <!--<descriptor>${pom.basedir}/src/main/assembly/assembly-kie-server-wildfly8.xml</descriptor>-->
-                <!--</assembly>-->
-              <!--</build>-->
-              <!--<run>-->
-                <!--<namingStrategy>alias</namingStrategy>-->
-                <!--<env>-->
-                  <!--<KIE_CONNECTION_URL>"jdbc:h2:mem:test;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE"</KIE_CONNECTION_URL>-->
-                  <!--<KIE_CONNECTION_DRIVER>h2</KIE_CONNECTION_DRIVER>-->
-                  <!--<KIE_CONNECTION_USER>sa</KIE_CONNECTION_USER>-->
-                  <!--<KIE_CONNECTION_PASSWORD>sa</KIE_CONNECTION_PASSWORD>-->
-                  <!--<KIE_CONNECTION_DATABASE>kie</KIE_CONNECTION_DATABASE>-->
-                <!--</env>-->
-                <!--<ports>-->
-                  <!--<port>kieserver.wf8.http.port:8080</port>-->
-                <!--</ports>-->
-                <!--<wait>-->
-                  <!--<log>Deployed "kie-server\.war"</log>-->
-                  <!--<time>${docker.run.timeout}</time>-->
-                <!--</wait>-->
-                <!--<log>-->
-                  <!--<prefix>DEMO</prefix>-->
-                  <!--<date>ISO8601</date>-->
-                  <!--<color>blue</color>-->
-                <!--</log>-->
-              <!--</run>-->
-            <!--</image>-->
+            <!-- KIE Server latest SNAPSHOT & Wildfly 10.0.0.Final. -->
+            <image>
+              <name>${docker.kie.repository}/kie-server-wildfly10:${docker.build.kie.tag}</name>
+              <alias>kie-server-wildfly10-${docker.build.kie.tag}-h2</alias>
+              <build>
+                <assembly>
+                  <dockerFileDir>${project.build.outputDirectory}/wildfly</dockerFileDir>
+                  <descriptor>${pom.basedir}/src/main/assembly/assembly-kie-server-wildfly10.xml</descriptor>
+                </assembly>
+              </build>
+              <run>
+                <namingStrategy>alias</namingStrategy>
+                <env>
+                  <KIE_CONNECTION_URL>"jdbc:h2:mem:test;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE"</KIE_CONNECTION_URL>
+                  <KIE_CONNECTION_DRIVER>h2</KIE_CONNECTION_DRIVER>
+                  <KIE_CONNECTION_USER>sa</KIE_CONNECTION_USER>
+                  <KIE_CONNECTION_PASSWORD>sa</KIE_CONNECTION_PASSWORD>
+                  <KIE_CONNECTION_DATABASE>kie</KIE_CONNECTION_DATABASE>
+                </env>
+                <ports>
+                  <port>kieserver.wf10.http.port:8080</port>
+                </ports>
+                <wait>
+                  <log>Deployed "kie-server\.war"</log>
+                  <time>${docker.run.timeout}</time>
+                </wait>
+                <log>
+                  <prefix>DEMO</prefix>
+                  <date>ISO8601</date>
+                  <color>blue</color>
+                </log>
+              </run>
+            </image>
             <!-- KIE Server latest SNAPSHOT & JBoss EAP 6.4. -->
             <!--<image>-->
               <!--<name>${docker.kie.repository}/kie-server-eap64:${docker.build.kie.tag}</name>-->
