WildFly 10 upgrade + remove EAP 6.4 containers
* EAP 6.4 is no longer supported. In future we
  may need/want to add images for EAP 7.
* Upgrade docker-maven-plugin from 0.13.3 to 0.15.7
  to support newer versions of Docker

--- a/kie-jboss-modules/pom.xml
+++ b/kie-jboss-modules/pom.xml
@@ -39,14 +39,10 @@
         </executions>
         <configuration>
           <descriptors>
-            <!-- JBoss Wildfly - MySQL driver module. -->
+            <!-- JBoss WildFly - MySQL driver module. -->
             <descriptor>src/main/assembly/wildfly/assembly-wildfly-mysql.xml</descriptor>
-            <!-- JBoss Wildfly - PostgreSQL driver module. -->
+            <!-- JBoss WildFly - PostgreSQL driver module. -->
             <descriptor>src/main/assembly/wildfly/assembly-wildfly-postgres.xml</descriptor>
-            <!-- JBoss EAP - MySQL driver module. -->
-            <descriptor>src/main/assembly/eap/assembly-eap-mysql.xml</descriptor>
-            <!-- JBoss EAP - PostgreSQL driver module. -->
-            <descriptor>src/main/assembly/eap/assembly-eap-postgres.xml</descriptor>
           </descriptors>
           <archive>
             <addMavenDescriptor>false</addMavenDescriptor>
