--- a/kie-drools-wb/pom.xml
+++ b/kie-drools-wb/pom.xml
@@ -18,13 +18,7 @@
       <groupId>org.kie</groupId>
       <artifactId>kie-drools-wb-distribution-wars</artifactId>
       <type>war</type>
-      <classifier>wildfly8</classifier>
-    </dependency>
-    <dependency>
-      <groupId>org.kie</groupId>
-      <artifactId>kie-drools-wb-distribution-wars</artifactId>
-      <type>war</type>
-      <classifier>eap6_4</classifier>
+      <classifier>wildfly10</classifier>
     </dependency>
     <dependency>
       <groupId>org.kie</groupId>
@@ -32,7 +26,7 @@
       <type>war</type>
       <classifier>tomcat7</classifier>
     </dependency>
-    <!-- Additonal dependencies for Tomcat 8 -->
+    <!-- Additional dependencies for Tomcat 8 -->
     <dependency>
       <groupId>org.kie</groupId>
       <artifactId>kie-tomcat-integration</artifactId>
@@ -51,7 +45,7 @@
     </dependency>
     <dependency>
       <groupId>org.jboss.spec.javax.transaction</groupId>
-      <artifactId>jboss-transaction-api_1.1_spec</artifactId>
+      <artifactId>jboss-transaction-api_1.2_spec</artifactId>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
@@ -59,7 +53,7 @@
     </dependency>
     <dependency>
       <groupId>org.jboss.spec.javax.security.jacc</groupId>
-      <artifactId>jboss-jacc-api_1.4_spec</artifactId>
+      <artifactId>jboss-jacc-api_1.5_spec</artifactId>
     </dependency>
     <dependency>
       <groupId>mysql</groupId>
@@ -81,18 +75,6 @@
       <classifier>wildfly-postgres</classifier>
       <type>tar.gz</type>
     </dependency>
-    <dependency>
-      <groupId>org.kie.docker</groupId>
-      <artifactId>kie-jboss-modules</artifactId>
-      <classifier>eap-mysql</classifier>
-      <type>tar.gz</type>
-    </dependency>
-    <dependency>
-      <groupId>org.kie.docker</groupId>
-      <artifactId>kie-jboss-modules</artifactId>
-      <classifier>eap-postgres</classifier>
-      <type>tar.gz</type>
-    </dependency>
 
   </dependencies>
 
@@ -106,78 +88,45 @@
 
     <plugins>
       <plugin>
-        <groupId>org.jolokia</groupId>
+        <groupId>io.fabric8</groupId>
         <artifactId>docker-maven-plugin</artifactId>
         <configuration>
           <!-- KIE Images. -->
           <images>
-            <!-- Drools Workbench latest SNAPSHOT & Wildfly 8.1.0.Final. -->
-            <!--<image>-->
-              <!--<name>${docker.kie.repository}/kie-drools-wb-wildfly8:${docker.build.kie.tag}</name>-->
-              <!--<alias>kie-drools-wb-wildfly8-${docker.build.kie.tag}-h2</alias>-->
-              <!--<build>-->
-                <!--<assembly>-->
-                  <!--<dockerFileDir>${project.build.outputDirectory}/wildfly</dockerFileDir>-->
-                  <!--<descriptor>${pom.basedir}/src/main/assembly/assembly-kie-drools-wb-wildfly8.xml-->
-                  <!--</descriptor>-->
-                <!--</assembly>-->
-              <!--</build>-->
-              <!--<run>-->
-                <!--<namingStrategy>alias</namingStrategy>-->
-                <!--<env>-->
-                  <!--<KIE_CONNECTION_URL>"jdbc:h2:mem:test;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE"</KIE_CONNECTION_URL>-->
-                  <!--<KIE_CONNECTION_DRIVER>h2</KIE_CONNECTION_DRIVER>-->
-                  <!--<KIE_CONNECTION_USER>sa</KIE_CONNECTION_USER>-->
-                  <!--<KIE_CONNECTION_PASSWORD>sa</KIE_CONNECTION_PASSWORD>-->
-                  <!--<KIE_CONNECTION_DATABASE>kie</KIE_CONNECTION_DATABASE>-->
-                <!--</env>-->
-                <!--<ports>-->
-                  <!--<port>kiedroolswb.wf8.http.port:8080</port>-->
-                <!--</ports>-->
-                <!--<wait>-->
-                  <!--<log>Deployed "kie-drools-wb\.war"</log>-->
-                  <!--<time>${docker.run.timeout}</time>-->
-                <!--</wait>-->
-                <!--<log>-->
-                  <!--<prefix>DEMO</prefix>-->
-                  <!--<date>ISO8601</date>-->
-                  <!--<color>blue</color>-->
-                <!--</log>-->
-              <!--</run>-->
-            <!--</image>-->
-            <!-- Drools Workbench latest SNAPSHOT & JBoss EAP 6.4. -->
-            <!--<image>-->
-              <!--<name>${docker.kie.repository}/kie-drools-wb-eap64:${docker.build.kie.tag}</name>-->
-              <!--<alias>kie-drools-wb-eap64-${docker.build.kie.tag}-h2</alias>-->
-              <!--<build>-->
-                <!--<assembly>-->
-                  <!--<dockerFileDir>${project.build.outputDirectory}/eap</dockerFileDir>-->
-                  <!--<descriptor>${pom.basedir}/src/main/assembly/assembly-kie-drools-wb-eap64.xml</descriptor>-->
-                <!--</assembly>-->
-              <!--</build>-->
-              <!--<run>-->
-                <!--<namingStrategy>alias</namingStrategy>-->
-                <!--<env>-->
-                  <!--<KIE_CONNECTION_URL>jdbc:h2:mem:test;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE</KIE_CONNECTION_URL>-->
-                  <!--<KIE_CONNECTION_DRIVER>h2</KIE_CONNECTION_DRIVER>-->
-                  <!--<KIE_CONNECTION_USER>sa</KIE_CONNECTION_USER>-->
-                  <!--<KIE_CONNECTION_PASSWORD>sa</KIE_CONNECTION_PASSWORD>-->
-                  <!--<KIE_CONNECTION_DATABASE>kie</KIE_CONNECTION_DATABASE>-->
-                <!--</env>-->
-                <!--<ports>-->
-                  <!--<port>kiedroolswb.eap64.http.port:8080</port>-->
-                <!--</ports>-->
-                <!--<wait>-->
-                  <!--<log>Deployed "kie-drools-wb\.war"</log>-->
-                  <!--<time>${docker.run.timeout}</time>-->
-                <!--</wait>-->
-                <!--<log>-->
-                  <!--<prefix>DEMO</prefix>-->
-                  <!--<date>ISO8601</date>-->
-                  <!--<color>blue</color>-->
-                <!--</log>-->
-              <!--</run>-->
-            <!--</image>-->
+             <!--Drools Workbench & WildFly 10 -->
+            <image>
+              <name>${docker.kie.repository}/kie-drools-wb-wildfly10:${docker.build.kie.tag}</name>
+              <alias>kie-drools-wb-wildfly10-${docker.build.kie.tag}-h2</alias>
+              <build>
+                <assembly>
+                  <dockerFileDir>${project.build.outputDirectory}/wildfly</dockerFileDir>
+                  <descriptor>${pom.basedir}/src/main/assembly/assembly-kie-drools-wb-wildfly10.xml
+                  </descriptor>
+                </assembly>
+              </build>
+              <run>
+                <namingStrategy>alias</namingStrategy>
+                <env>
+                  <KIE_CONNECTION_URL>jdbc:h2:mem:test;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE</KIE_CONNECTION_URL>
+                  <KIE_CONNECTION_DRIVER>h2</KIE_CONNECTION_DRIVER>
+                  <KIE_CONNECTION_USER>sa</KIE_CONNECTION_USER>
+                  <KIE_CONNECTION_PASSWORD>sa</KIE_CONNECTION_PASSWORD>
+                  <KIE_CONNECTION_DATABASE>kie</KIE_CONNECTION_DATABASE>
+                </env>
+                <ports>
+                  <port>kiedroolswb.wf10.http.port:8080</port>
+                </ports>
+                <wait>
+                  <log>Deployed "kie-drools-wb\.war"</log>
+                  <time>${docker.run.timeout}</time>
+                </wait>
+                <log>
+                  <prefix>DEMO</prefix>
+                  <date>ISO8601</date>
+                  <color>blue</color>
+                </log>
+              </run>
+            </image>
             <!-- Drools Workbench & Tomcat 8. -->
             <image>
               <name>${docker.kie.repository}/kie-drools-wb-tomcat8:${docker.build.kie.tag}</name>
