--- a/kie-server/pom.xml
+++ b/kie-server/pom.xml
@@ -52,7 +52,7 @@
     </dependency>
     <dependency>
       <groupId>org.jboss.spec.javax.transaction</groupId>
-      <artifactId>jboss-transaction-api_1.1_spec</artifactId>
+      <artifactId>jboss-transaction-api_1.2_spec</artifactId>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
@@ -60,7 +60,7 @@
     </dependency>
     <dependency>
       <groupId>org.jboss.spec.javax.security.jacc</groupId>
-      <artifactId>jboss-jacc-api_1.4_spec</artifactId>
+      <artifactId>jboss-jacc-api_1.5_spec</artifactId>
     </dependency>
   </dependencies>
 
@@ -74,12 +74,12 @@
     <plugins>
 
       <plugin>
-        <groupId>org.jolokia</groupId>
+        <groupId>io.fabric8</groupId>
         <artifactId>docker-maven-plugin</artifactId>
         <configuration>
           <!-- KIE Images. -->
           <images>
-            <!-- KIE Server latest SNAPSHOT & Wildfly 10.0.0.Final. -->
+            <!-- KIE Server latest SNAPSHOT & WildFly 10.0.0.Final. -->
             <image>
               <name>${docker.kie.repository}/kie-server-wildfly10:${docker.build.kie.tag}</name>
               <alias>kie-server-wildfly10-${docker.build.kie.tag}-h2</alias>
@@ -92,7 +92,7 @@
               <run>
                 <namingStrategy>alias</namingStrategy>
                 <env>
-                  <KIE_CONNECTION_URL>"jdbc:h2:mem:test;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE"</KIE_CONNECTION_URL>
+                  <KIE_CONNECTION_URL>jdbc:h2:mem:test;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE</KIE_CONNECTION_URL>
                   <KIE_CONNECTION_DRIVER>h2</KIE_CONNECTION_DRIVER>
                   <KIE_CONNECTION_USER>sa</KIE_CONNECTION_USER>
                   <KIE_CONNECTION_PASSWORD>sa</KIE_CONNECTION_PASSWORD>
@@ -112,39 +112,6 @@
                 </log>
               </run>
             </image>
-            <!-- KIE Server latest SNAPSHOT & JBoss EAP 6.4. -->
-            <!--<image>-->
-              <!--<name>${docker.kie.repository}/kie-server-eap64:${docker.build.kie.tag}</name>-->
-              <!--<alias>kie-server-eap64-${docker.build.kie.tag}-h2</alias>-->
-              <!--<build>-->
-                <!--<assembly>-->
-                  <!--<dockerFileDir>${project.build.outputDirectory}/eap</dockerFileDir>-->
-                  <!--<descriptor>${pom.basedir}/src/main/assembly/assembly-kie-server-eap64.xml</descriptor>-->
-                <!--</assembly>-->
-              <!--</build>-->
-              <!--<run>-->
-                <!--<namingStrategy>alias</namingStrategy>-->
-                <!--<env>-->
-                  <!--<KIE_CONNECTION_URL>jdbc:h2:mem:test;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE</KIE_CONNECTION_URL>-->
-                  <!--<KIE_CONNECTION_DRIVER>h2</KIE_CONNECTION_DRIVER>-->
-                  <!--<KIE_CONNECTION_USER>sa</KIE_CONNECTION_USER>-->
-                  <!--<KIE_CONNECTION_PASSWORD>sa</KIE_CONNECTION_PASSWORD>-->
-                  <!--<KIE_CONNECTION_DATABASE>kie</KIE_CONNECTION_DATABASE>-->
-                <!--</env>-->
-                <!--<ports>-->
-                  <!--<port>kieserver.eap64.http.port:8080</port>-->
-                <!--</ports>-->
-                <!--<wait>-->
-                  <!--<log>Deployed "kie-server\.war"</log>-->
-                  <!--<time>${docker.run.timeout}</time>-->
-                <!--</wait>-->
-                <!--<log>-->
-                  <!--<prefix>DEMO</prefix>-->
-                  <!--<date>ISO8601</date>-->
-                  <!--<color>blue</color>-->
-                <!--</log>-->
-              <!--</run>-->
-            <!--</image>-->
             <!-- KIE Server & Tomcat8. -->
             <image>
               <name>${docker.kie.repository}/kie-server-tomcat8:${docker.build.kie.tag}</name>
@@ -183,14 +150,14 @@
         </configuration>
         <executions>
           <execution>
-            <id>kieserver-build</id>
+            <id>kie-server-build</id>
             <phase>pre-integration-test</phase>
             <goals>
               <goal>build</goal>
             </goals>
           </execution>
           <execution>
-            <id>kieserver-start</id>
+            <id>kie-server-start</id>
             <phase>post-integration-test</phase>
             <goals>
               <goal>start</goal>
