--- a/uf-dashbuilder/pom.xml
+++ b/uf-dashbuilder/pom.xml
@@ -18,13 +18,7 @@
       <groupId>org.dashbuilder</groupId>
       <artifactId>dashbuilder-distros</artifactId>
       <type>war</type>
-      <classifier>wildfly8</classifier>
-    </dependency>
-    <dependency>
-      <groupId>org.dashbuilder</groupId>
-      <artifactId>dashbuilder-distros</artifactId>
-      <type>war</type>
-      <classifier>eap6_4</classifier>
+      <classifier>wildfly10</classifier>
     </dependency>
     <dependency>
       <groupId>org.dashbuilder</groupId>
@@ -48,7 +42,7 @@
     </dependency>
     <dependency>
       <groupId>org.jboss.spec.javax.transaction</groupId>
-      <artifactId>jboss-transaction-api_1.1_spec</artifactId>
+      <artifactId>jboss-transaction-api_1.2_spec</artifactId>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
@@ -56,7 +50,7 @@
     </dependency>
     <dependency>
       <groupId>org.jboss.spec.javax.security.jacc</groupId>
-      <artifactId>jboss-jacc-api_1.4_spec</artifactId>
+      <artifactId>jboss-jacc-api_1.5_spec</artifactId>
     </dependency>
     <dependency>
       <groupId>mysql</groupId>
@@ -78,18 +72,6 @@
       <classifier>wildfly-postgres</classifier>
       <type>tar.gz</type>
     </dependency>
-    <dependency>
-      <groupId>org.kie.docker</groupId>
-      <artifactId>kie-jboss-modules</artifactId>
-      <classifier>eap-mysql</classifier>
-      <type>tar.gz</type>
-    </dependency>
-    <dependency>
-      <groupId>org.kie.docker</groupId>
-      <artifactId>kie-jboss-modules</artifactId>
-      <classifier>eap-postgres</classifier>
-      <type>tar.gz</type>
-    </dependency>
   </dependencies>
 
   <build>
@@ -102,78 +84,44 @@
     <plugins>
 
       <plugin>
-        <groupId>org.jolokia</groupId>
+        <groupId>io.fabric8</groupId>
         <artifactId>docker-maven-plugin</artifactId>
         <configuration>
           <images>
-            <!-- UF Dashbuilder latest SNAPSHOT & Wildfly 8.1.0.Final. -->
-            <!--<image>-->
-              <!--<name>${docker.kie.repository}/uf-dashbuilder-wildfly8:${docker.build.dashbuilder.tag}</name>-->
-              <!--<alias>uf-dashbuilder-wildfly8-${docker.build.dashbuilder.tag}</alias>-->
-              <!--<build>-->
-                <!--<assembly>-->
-                  <!--<dockerFileDir>${project.build.outputDirectory}/wildfly</dockerFileDir>-->
-                  <!--<descriptor>${pom.basedir}/src/main/assembly/assembly-dashbuilder-wildfly8.xml-->
-                  <!--</descriptor>-->
-                <!--</assembly>-->
-              <!--</build>-->
-              <!--<run>-->
-                <!--<namingStrategy>alias</namingStrategy>-->
-                <!--<env>-->
-                  <!--<KIE_CONNECTION_URL>"jdbc:h2:mem:test;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE"</KIE_CONNECTION_URL>-->
-                  <!--<KIE_CONNECTION_DRIVER>h2</KIE_CONNECTION_DRIVER>-->
-                  <!--<KIE_CONNECTION_USER>sa</KIE_CONNECTION_USER>-->
-                  <!--<KIE_CONNECTION_PASSWORD>sa</KIE_CONNECTION_PASSWORD>-->
-                  <!--<KIE_CONNECTION_DATABASE>kie</KIE_CONNECTION_DATABASE>-->
-                <!--</env>-->
-                <!--<ports>-->
-                  <!--<port>dashbuilder.wf8.http.port:8080</port>-->
-                <!--</ports>-->
-                <!--<wait>-->
-                  <!--<log>Deployed "dashbuilder\.war"</log>-->
-                  <!--<time>${docker.run.timeout}</time>-->
-                <!--</wait>-->
-                <!--<log>-->
-                  <!--<prefix>DEMO</prefix>-->
-                  <!--<date>ISO8601</date>-->
-                  <!--<color>blue</color>-->
-                <!--</log>-->
-              <!--</run>-->
-            <!--</image>-->
-            <!-- UF Dashbuilder latest SNAPSHOT & JBoss EAP 6.4. -->
-            <!--<image>-->
-              <!--<name>${docker.kie.repository}/uf-dashbuilder-eap64:${docker.build.dashbuilder.tag}</name>-->
-              <!--<alias>uf-dashbuilder-eap64-${docker.build.dashbuilder.tag}</alias>-->
-              <!--<build>-->
-                <!--<assembly>-->
-                  <!--<dockerFileDir>${project.build.outputDirectory}/eap</dockerFileDir>-->
-                  <!--<descriptor>${pom.basedir}/src/main/assembly/assembly-dashbuilder-eap64.xml-->
-                  <!--</descriptor>-->
-                <!--</assembly>-->
-              <!--</build>-->
-              <!--<run>-->
-                <!--<namingStrategy>alias</namingStrategy>-->
-                <!--<env>-->
-                  <!--<KIE_CONNECTION_URL>jdbc:h2:mem:test;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE</KIE_CONNECTION_URL>-->
-                  <!--<KIE_CONNECTION_DRIVER>h2</KIE_CONNECTION_DRIVER>-->
-                  <!--<KIE_CONNECTION_USER>sa</KIE_CONNECTION_USER>-->
-                  <!--<KIE_CONNECTION_PASSWORD>sa</KIE_CONNECTION_PASSWORD>-->
-                  <!--<KIE_CONNECTION_DATABASE>kie</KIE_CONNECTION_DATABASE>-->
-                <!--</env>-->
-                <!--<ports>-->
-                  <!--<port>dashbuilder.eap64.http.port:8080</port>-->
-                <!--</ports>-->
-                <!--<wait>-->
-                  <!--<log>Deployed "dashbuilder\.war"</log>-->
-                  <!--<time>${docker.run.timeout}</time>-->
-                <!--</wait>-->
-                <!--<log>-->
-                  <!--<prefix>DEMO</prefix>-->
-                  <!--<date>ISO8601</date>-->
-                  <!--<color>blue</color>-->
-                <!--</log>-->
-              <!--</run>-->
-            <!--</image>-->
+            <!-- UF Dashbuilder latest SNAPSHOT & WildFly 10 -->
+            <image>
+              <name>${docker.kie.repository}/uf-dashbuilder-wildfly10:${docker.build.dashbuilder.tag}</name>
+              <alias>uf-dashbuilder-wildfly10-${docker.build.dashbuilder.tag}</alias>
+              <build>
+                <assembly>
+                  <dockerFileDir>${project.build.outputDirectory}/wildfly</dockerFileDir>
+                  <descriptor>${pom.basedir}/src/main/assembly/assembly-dashbuilder-wildfly10.xml
+                  </descriptor>
+                </assembly>
+              </build>
+              <run>
+                <namingStrategy>alias</namingStrategy>
+                <env>
+                  <KIE_CONNECTION_URL>jdbc:h2:mem:test;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE</KIE_CONNECTION_URL>
+                  <KIE_CONNECTION_DRIVER>h2</KIE_CONNECTION_DRIVER>
+                  <KIE_CONNECTION_USER>sa</KIE_CONNECTION_USER>
+                  <KIE_CONNECTION_PASSWORD>sa</KIE_CONNECTION_PASSWORD>
+                  <KIE_CONNECTION_DATABASE>kie</KIE_CONNECTION_DATABASE>
+                </env>
+                <ports>
+                  <port>dashbuilder.wf10.http.port:8080</port>
+                </ports>
+                <wait>
+                  <log>Deployed "dashbuilder\.war"</log>
+                  <time>${docker.run.timeout}</time>
+                </wait>
+                <log>
+                  <prefix>DEMO</prefix>
+                  <date>ISO8601</date>
+                  <color>blue</color>
+                </log>
+              </run>
+            </image>
             <!-- UF Dashbuilder latest SNAPSHOT & Tomcat7. -->
             <image>
               <name>${docker.kie.repository}/uf-dashbuilder-tomcat8:${docker.build.dashbuilder.tag}</name>
